--- a/CODE2040Dashboard/.classpath
+++ b/CODE2040Dashboard/.classpath
@@ -78,5 +78,6 @@
 		</attributes>
 	</classpathentry>
 	<classpathentry kind="con" path="com.springsource.sts.grails.core.CLASSPATH_CONTAINER"/>
+	<classpathentry kind="lib" path="lib/mysql-connector-java-5.1.21-bin.jar"/>
 	<classpathentry kind="output" path="target-eclipse/classes"/>
 </classpath>
