--- a/CODE2040Dashboard/application.properties
+++ b/CODE2040Dashboard/application.properties
@@ -1,6 +1,7 @@
 #Grails Metadata file
-#Tue Jul 24 22:40:05 PDT 2012
+#Tue Aug 21 20:58:27 PDT 2012
 app.grails.version=2.0.4
 app.name=CODE2040Dashboard
 app.servlet.version=2.5
 app.version=0.1
+plugins.blueprint=1.0.2
