--- a/CODE2040Dashboard/.settings/org.eclipse.core.resources.prefs
+++ b/CODE2040Dashboard/.settings/org.eclipse.core.resources.prefs
@@ -1,6 +1,20 @@
 eclipse.preferences.version=1
+encoding//.link_to_grails_plugins/email-confirmation-2.0.5-SNAPSHOT/grails-app/i18n=UTF-8
+encoding//.link_to_grails_plugins/email-confirmation-2.0.5-SNAPSHOT/grails-app/i18n/messages.properties=UTF-8
+encoding//.link_to_grails_plugins/email-confirmation-2.0.5-SNAPSHOT/grails-app/i18n/messages_de.properties=UTF-8
+encoding//.link_to_grails_plugins/email-confirmation-2.0.5-SNAPSHOT/grails-app/i18n/messages_fr.properties=UTF-8
+encoding//.link_to_grails_plugins/email-confirmation-2.0.5-SNAPSHOT/grails-app/i18n/messages_it.properties=UTF-8
+encoding//.link_to_grails_plugins/email-confirmation-2.0.5-SNAPSHOT/grails-app/i18n/messages_ja.properties=UTF-8
+encoding//.link_to_grails_plugins/email-confirmation-2.0.5-SNAPSHOT/grails-app/i18n/messages_nl.properties=UTF-8
+encoding//.link_to_grails_plugins/email-confirmation-2.0.5-SNAPSHOT/grails-app/i18n/messages_ru.properties=UTF-8
+encoding//.link_to_grails_plugins/email-confirmation-2.0.5-SNAPSHOT/grails-app/i18n/messages_zh_CN.properties=UTF-8
 encoding//.link_to_grails_plugins/jquery-1.7.1/grails-app/i18n=UTF-8
 encoding//.link_to_grails_plugins/jquery-1.7.1/grails-app/i18n/messages.properties=UTF-8
+encoding//.link_to_grails_plugins/mail-1.0/grails-app/i18n=UTF-8
+encoding//.link_to_grails_plugins/mail-1.0/grails-app/i18n/messages.properties=UTF-8
+encoding//.link_to_grails_plugins/mail-1.0/grails-app/i18n/messages_fr.properties=UTF-8
+encoding//.link_to_grails_plugins/platform-core-1.0.M2j-SNAPSHOT/grails-app/i18n=UTF-8
+encoding//.link_to_grails_plugins/platform-core-1.0.M2j-SNAPSHOT/grails-app/i18n/messages.properties=UTF-8
 encoding//.link_to_grails_plugins/resources-1.1.6/grails-app/i18n=UTF-8
 encoding//.link_to_grails_plugins/resources-1.1.6/grails-app/i18n/messages.properties=UTF-8
 encoding//.link_to_grails_plugins/spring-security-core-1.2.7.3/grails-app/i18n=UTF-8
