--- a/CODE2040Dashboard/application.properties
+++ b/CODE2040Dashboard/application.properties
@@ -1,7 +1,8 @@
 #Grails Metadata file
-#Mon Aug 13 10:51:34 PDT 2012
+#Thu Aug 23 21:10:52 PDT 2012
 app.grails.version=2.0.4
 app.name=CODE2040Dashboard
 app.servlet.version=2.5
 app.version=0.1
+plugins.email-confirmation=2.0.5-SNAPSHOT
 plugins.spring-security-core=1.2.7.3
