--- a/CODE2040Dashboard/application.properties
+++ b/CODE2040Dashboard/application.properties
@@ -1,5 +1,5 @@
 #Grails Metadata file
-#Thu Aug 23 21:10:52 PDT 2012
+#Wed Aug 29 13:04:34 EDT 2012
 app.grails.version=2.0.4
 app.name=CODE2040Dashboard
 app.servlet.version=2.5
